# gini-index-project

./: Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  env_example.txt  pyproject.toml  requirements.txt
app/: main.py  models.py
app/controllers/: gini_controller.py
app/services/: gini_service.py
data/: GINI91AC.XLS  GINI91AL.XLS  GINI91AM.XLS  GINI91AP.XLS  GINI91BA.XLS  GINI91CE.XLS  GINI91DF.XLS  GINI91ES.XLS  GINI91GO.XLS  GINI91MA.XLS  GINI91MG.XLS  GINI91MS.XLS  GINI91MT.XLS  GINI91PA.XLS  GINI91PB.XLS  GINI91PE.XLS  GINI91PI.XLS  GINI91PR.XLS  GINI91RJ.XLS  GINI91RN.XLS  GINI91RO.XLS  GINI91RR.XLS  GINI91RS.XLS  GINI91SC.XLS  GINI91SE.XLS  GINI91SP.XLS  GINI91TO.XLS
migrations/: env.py
migrations/versions/: 2024_8_29_initial_migration.py
tests/: test_gini_service.py
