[tool.poetry]
name = "gini-index-project"
version = "0.1.0"
description = ""
authors = ["augustojulio <augusto.juliogec@gmail.com>"]
readme = "README.md"
packages = [{include = "gini_index_project"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.3.2"
sqlalchemy = "^2.0.16"
psycopg2-binary = "2.9.6"
pandas = "^2.2.2"
alembic = "1.10.3"
python-dotenv = "0.21.0"
pyexcel = "^0.7.0"
pyexcel-xls = "^0.7.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
